[package]
name = "tidefs-storage-node"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "Networked storage node daemon: bridges tidefs-transport with tidefs-replicated-object-store"

[dependencies]
tokio = { version = "1", features = ["rt"] }
tidefs-transport = { path = "../../crates/tidefs-transport" }
tidefs-replicated-object-store = { path = "../../crates/tidefs-replicated-object-store" }
tidefs-local-object-store = { path = "../../crates/tidefs-local-object-store" }
tidefs-local-filesystem = { path = "../../crates/tidefs-local-filesystem" }
tidefs-membership-live = { path = "../../crates/tidefs-membership-live" }
tidefs-membership-types = { path = "../../crates/tidefs-membership-types" }
tidefs-membership-epoch = { path = "../../crates/tidefs-membership-epoch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tidefs-pool-import = { path = "../../crates/tidefs-pool-import" }
tidefs-cluster = { path = "../../crates/tidefs-cluster" }
tidefs-replication-model = { path = "../../crates/tidefs-replication-model" }
tidefs-partition-runtime = { path = "../../crates/tidefs-partition-runtime" }
bincode = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
hex = "0.4"
blake3 = "1"
tidefs-pool-scan = { path = "../../crates/tidefs-pool-scan" }
tidefs-node-join = { path = "../../crates/tidefs-node-join" }
tidefs-types-pool-label-core = { path = "../../crates/tidefs-types-pool-label-core" }
tidefs-rebuild-runtime = { path = "../../crates/tidefs-rebuild-runtime" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "tidefs-storage-node"
path = "src/main.rs"
