[package]
name = "tidefs-storage-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Networked storage node daemon: bridges tidefs-transport with tidefs-replicated-object-store"

[dependencies]
tokio = { workspace = true, features = ["rt"] }
tidefs-transport = { workspace = true }
tidefs-send-stream = { workspace = true }
tidefs-replicated-object-store = { workspace = true }
tidefs-local-object-store = { workspace = true }
tidefs-local-filesystem = { workspace = true }
tidefs-membership-live = { workspace = true }
tidefs-membership-types = { workspace = true }
tidefs-membership-epoch = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tidefs-pool-import = { workspace = true }
tidefs-cluster = { workspace = true }
tidefs-replication-model = { workspace = true }
tidefs-partition-runtime = { workspace = true }
bincode = { workspace = true }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
hex = { workspace = true }
blake3 = "1"
tidefs-pool-scan = { workspace = true }
tidefs-node-join = { workspace = true }
tidefs-types-pool-label-core = { workspace = true }
tidefs-rebuild-runtime = { workspace = true }
tidefs-rebuild-planner = { workspace = true }
tidefs-durability-layout = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "tidefs-storage-node"
path = "src/main.rs"
