[package]
name = "tidefs-store-demo"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "Minimal durable local object-store write/read/replay demo for TideFS"

[dependencies]
tidefs-local-object-store = { path = "../../crates/tidefs-local-object-store" }

[[bin]]
name = "tidefs-store-demo"
path = "src/main.rs"
