[package]
name = "tidefsctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "TideFS CLI for operator commands and development harnesses"

[dependencies]
tidefs-auth = { workspace = true }
tidefs-posix-filesystem-adapter-daemon = { workspace = true }
tidefs-block-volume-adapter-core = { workspace = true }
tidefs-pool-import = { workspace = true }
tidefs-pool-scan = { workspace = true }
tidefs-validation = { workspace = true }
tidefs-recovery-loop = { workspace = true }
tidefs-replication-model = { workspace = true }
tidefs-device-removal = { workspace = true }
tidefs-types-pool-label-core = { workspace = true }
tidefs-local-object-store = { workspace = true }
tidefs-local-filesystem = { workspace = true }
tidefs-dataset-lifecycle = { workspace = true }
tidefs-dataset-properties = { workspace = true }
tidefs-dataset-feature-flags = { workspace = true }
tidefs-types-dataset-feature-flags-core = { workspace = true }
tidefs-cluster = { workspace = true }
tidefs-membership-epoch = { workspace = true }
blake3 = "=1.5.5"
tidefs-transport = { workspace = true }
tidefs-block-volume-adapter-daemon = { workspace = true }
tidefs-block-volume-adapter-ublk-control-runtime = { workspace = true }
clap = { version = "4", features = ["derive"] }
bincode = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1", features = ["derive"] }
tidefs-storage-intent-core = { workspace = true, features = ["serde"] }
tidefs-encryption = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "tidefsctl"
path = "src/main.rs"
