[package]
name = "tidefs-anti-entropy-auditor"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "Anti-entropy auditor: periodic scan/compare/repair-candidate discovery bridge between replica health tracking and rebuild — P8-03 data_copy_8"

[dependencies]
tidefs-replication-model = { path = "../tidefs-replication-model" }
tidefs-replica-health = { path = "../tidefs-replica-health" }
tidefs-checksum-tree = { path = "../tidefs-checksum-tree" }
tidefs-local-object-store = { path = "../tidefs-local-object-store" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
tidefs-membership-epoch = { path = "../tidefs-membership-epoch" }
tidefs-rebuild-planner = { path = "../tidefs-rebuild-planner" }

[lib]
path = "src/lib.rs"
