[package]
name = "tidefs-anti-entropy-auditor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Anti-entropy auditor: periodic scan/compare/repair-candidate discovery bridge between replica health tracking and rebuild — source-owned data_copy_8"

[dependencies]
tidefs-replication-model = { workspace = true }
tidefs-replica-health = { workspace = true }
tidefs-checksum-tree = { workspace = true }
tidefs-local-object-store = { workspace = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
tidefs-membership-epoch = { workspace = true }
tidefs-rebuild-planner = { workspace = true }

[lib]
path = "src/lib.rs"
