[package]
name = "tidefs-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Authentication/authorization/audit model: Ed25519 node identity, mutual attestation, principal model, session grants, authorization pipeline, override machinery, audit chain seals"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
rand = "0.7"
sha2 = { workspace = true }
hmac = { workspace = true }
blake3 = "1"
chacha20poly1305 = { workspace = true }
thiserror = "2"
hex = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

tidefs-permission = { workspace = true, features = ["serde"] }

[lib]
path = "src/lib.rs"
