[package]
name = "tidefs-background-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = """
Background service framework: unified tick-driven scheduler with five-stage
priority dispatch, round-robin fairness, per-tick budget enforcement, and
IncrementalJob integration adapter. no_std / forbid(unsafe_code).
"""

[features]
default = ["alloc"]
std = ["alloc"]
scheduler = ["std", "dep:tokio"]
alloc = ["tidefs-incremental-job-core/alloc", "tidefs-types-incremental-job-core/alloc"]
serde = ["dep:serde", "alloc", "tidefs-types-incremental-job-core/serde"]
observability = ["alloc"]

[dependencies]
tidefs-incremental-job-core = { workspace = true, default-features = false }
tidefs-types-incremental-job-core = { workspace = true, default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"], optional = true }

[dev-dependencies]
tidefs-incremental-job-core = { workspace = true, default-features = false }
tidefs-types-incremental-job-core = { workspace = true, default-features = false }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tidefs-cleanup-job-core = { workspace = true }
tidefs-types-deferred-cleanup-core = { workspace = true }
