[package]
name = "tidefs-background-scheduler"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = """
Background service framework: unified tick-driven scheduler with five-stage
priority dispatch, round-robin fairness, per-tick budget enforcement, and
IncrementalJob integration adapter. no_std / forbid(unsafe_code).
"""

[features]
default = ["alloc"]
std = ["alloc"]
scheduler = ["std", "dep:tokio"]
alloc = ["tidefs-incremental-job-core/alloc", "tidefs-types-incremental-job-core/alloc"]
serde = ["dep:serde", "alloc", "tidefs-types-incremental-job-core/serde"]
observability = ["alloc"]

[dependencies]
tidefs-incremental-job-core = { path = "../tidefs-incremental-job-core", default-features = false }
tidefs-types-incremental-job-core = { path = "../tidefs-types-incremental-job-core", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }

[dev-dependencies]
tidefs-incremental-job-core = { path = "../tidefs-incremental-job-core", default-features = false }
tidefs-types-incremental-job-core = { path = "../tidefs-types-incremental-job-core", default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tidefs-cleanup-job-core = { path = "../tidefs-cleanup-job-core" }
tidefs-types-deferred-cleanup-core = { path = "../tidefs-types-deferred-cleanup-core" }
