[package]
name = "tidefs-binary_schema-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Canonical binary schema core: ids, endian wrappers, feature bits, fingerprints, continuity law — no_std"

[lib]
path = "src/lib.rs"

[features]
proptest = ["dep:proptest"]

[dependencies]
proptest = { version = "=1.9.0", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }
tidefs-binary_schema-framing = { workspace = true }
tidefs-binary_schema-checksum = { workspace = true }
