[package]
name = "tidefs-binary_schema-framing"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Canonical binary schema framing: envelope, section, and chunk header encode/decode per P2-03 §2"

[dependencies]
tidefs-binary_schema-core = { path = "../tidefs-binary_schema-core" }
tidefs-binary_schema-checksum = { path = "../tidefs-binary_schema-checksum" }

[dev-dependencies]
tidefs-binary_schema-core = { path = "../tidefs-binary_schema-core" }
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }

[features]
fuzz = []

[lib]
path = "src/lib.rs"
