[package]
name = "tidefs-block-volume-adapter-ublk-control-runtime"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "Runtime ublk control-device read-only probe boundary for the TideFS block-volume adapter"

[dependencies]
libc = "0.2"

io-uring = "0.7.12"
tidefs-ublk-abi = { path = "../tidefs-ublk-abi" }
blake3 = "1.5"
