[package]
name = "tidefs-block-volume-adapter-ublk-control-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Runtime ublk control-device read-only probe boundary for the TideFS block-volume adapter"

[dependencies]
libc = "0.2"

io-uring = "0.7.12"
tidefs-ublk-abi = { workspace = true }
blake3 = "1.5"

[lints.clippy]
unsafe_code = "allow"
