[package]
name = "tidefs-bulk-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Cluster BULK service state machine for connection-scoped TCP_STREAM BulkToken transfers"

[features]
default = ["tcp"]
tcp = []

[dependencies]
crc32c = "0.6"
tidefs-transport = { workspace = true }

[lib]
path = "src/lib.rs"
