[package]
name = "tidefs-cache-coherency"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "Coherency event bus and invalidation subscriber trait for mmap lease-driven cache invalidation"

[dependencies]

[lib]
path = "src/lib.rs"
