[package]
name = "tidefs-cache-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "Cache lattice runtime: registry, eviction, invalidation, and cache-lattice view management (P4-02 Phase 2)"

[dependencies]
blake3 = { version = "1", default-features = false }
tidefs-types-cache-lattice-core = { path = "../tidefs-types-cache-lattice-core" }
tidefs-cache-coherency = { path = "../tidefs-cache-coherency" }
tidefs-posix-filesystem-adapter-workers-io = { path = "../tidefs-posix-filesystem-adapter-workers-io" }

[dev-dependencies]
tidefs-types-cache-lattice-core = { path = "../tidefs-types-cache-lattice-core" }
tidefs-cache-coherency = { path = "../tidefs-cache-coherency" }
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }

[lib]
path = "src/lib.rs"
