[package]
name = "tidefs-cache-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Cache lattice runtime: registry, eviction, invalidation, and cache-lattice view management (P4-02 Phase 2)"

[features]
default = []
adapter-workers-io = ["dep:tidefs-posix-filesystem-adapter-workers-io"]

[dependencies]
blake3 = { version = "1", default-features = false }
tidefs-background-scheduler = { workspace = true }
tidefs-incremental-job-core = { workspace = true }
tidefs-types-cache-lattice-core = { workspace = true }
tidefs-cache-coherency = { workspace = true }
tidefs-posix-filesystem-adapter-workers-io = { workspace = true, optional = true }

[dev-dependencies]
tidefs-types-cache-lattice-core = { workspace = true }
tidefs-cache-coherency = { workspace = true }
tidefs-types-incremental-job-core = { workspace = true }
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }

[lib]
path = "src/lib.rs"
