[package]
name = "tidefs-checksum-tree"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "Incremental Merkle checksum tree with BLAKE3 for partial-read integrity, scrub acceleration, and send/receive integrity (G3 phase 1)"

[dependencies]
blake3 = { version = "1", default-features = false }
tidefs-binary_schema-core = { path = "../tidefs-binary_schema-core" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }

[features]
default = ["serde"]
serde = ["dep:serde"]

[lib]
path = "src/lib.rs"
