[package]
name = "tidefs-chunk-shipper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "P8-03 data_copy_6 chunk shipper: stage, stream, and receive replica chunks bridging transfer orchestrator tickets to transport-layer execution with verification handoff"

[dependencies]
tidefs-replication-model = { workspace = true }
tidefs-membership-epoch = { workspace = true }
tidefs-binary_schema-framing = { workspace = true }
tidefs-binary_schema-core = { workspace = true }
tidefs-transport = { workspace = true }
tidefs-send-stream = { workspace = true }
tidefs-receive-stream = { workspace = true }
blake3 = "1"
serde = { version = "1", features = ["derive"] }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt"] }
serde_json = { workspace = true }
