[package]
name = "tidefs-chunk-shipper"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "P8-03 data_copy_6 chunk shipper: stage, stream, and receive replica chunks bridging transfer orchestrator tickets to transport-layer execution with verification handoff"

[dependencies]
tidefs-replication-model = { path = "../tidefs-replication-model" }
tidefs-membership-epoch = { path = "../tidefs-membership-epoch" }
tidefs-binary_schema-framing = { path = "../tidefs-binary_schema-framing" }
tidefs-binary_schema-core = { path = "../tidefs-binary_schema-core" }
tidefs-transport = { path = "../tidefs-transport" }
tidefs-send-stream = { path = "../tidefs-send-stream" }
tidefs-receive-stream = { path = "../tidefs-receive-stream" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt"] }
serde_json = "1"
