[package]
name = "tidefs-claim-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Claim ledger runtime: authority-tracked resource consumption, claim admission, and budget domain governance for Design rule Rule 3"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tidefs-types-claim-ledger-core = { workspace = true }
tidefs-types-vfs-core = { workspace = true }

[dev-dependencies]
proptest = "=1.9.0"

[lib]
path = "src/lib.rs"
