[package]
name = "tidefs-cleanup-engine"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "CleanupEngine: BLAKE3-verified deferred cleanup execution with progress checkpointing and intent-log crash safety"

[dependencies]
tidefs-cleanup-queue-core = { path = "../tidefs-cleanup-queue-core" }
tidefs-cleanup-job-core = { path = "../tidefs-cleanup-job-core" }
tidefs-types-deferred-cleanup-core = { path = "../tidefs-types-deferred-cleanup-core" }
blake3 = { version = "1", default-features = false }

[lib]
path = "src/lib.rs"
