[package]
name = "tidefs-cleanup-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "CleanupEngine: BLAKE3-verified deferred cleanup execution with progress checkpointing and intent-log crash safety"

[dependencies]
tidefs-cleanup-queue-core = { workspace = true }
tidefs-cleanup-job-core = { workspace = true }
tidefs-types-deferred-cleanup-core = { workspace = true }
tidefs-types-incremental-job-core = { workspace = true }
blake3 = { version = "1", default-features = false }

[lib]
path = "src/lib.rs"
