[package]
name = "tidefs-cleanup-job-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "CleanupJob: deferred cleanup IncrementalJob that drains work items and frees extents within a per-tick budget"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tidefs-types-incremental-job-core = { workspace = true, features = ["serde"] }
tidefs-types-deferred-cleanup-core = { workspace = true }
tidefs-cleanup-queue-core = { workspace = true }

[dev-dependencies]
tidefs-types-incremental-job-core = { workspace = true, features = ["serde"] }
