[package]
name = "tidefs-cleanup-queue-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Persistent deferred cleanup work queue backed by the generic B+tree"

[dependencies]
tidefs-btree = { workspace = true }
tidefs-types-deferred-cleanup-core = { workspace = true }
tidefs-commit_group = { workspace = true }

tidefs-reclaim-queue-core = { workspace = true }
tidefs-intent-log = { workspace = true }
blake3 = "1"


[dev-dependencies]
tempfile = { workspace = true }

[lib]
path = "src/lib.rs"
